--- a/locales/cs/common.yml
+++ b/locales/cs/common.yml
@@ -142,7 +142,7 @@ AiTraining:
             -  Týden předem s vámi na **nezávazném hovoru** proberu na online hovoru, co přesně řešíte. Podle toho vám navrhnu postup i cenu na míru. 
             -  Pokud mi poskytnete přístupy ke svému kódu, mohu se podívat na konkrétní detaily *(samozřejmě s možností podepsání NDA)*.
             -  V rámci Vaší firmy v ČR nebo online.
-            -  Dvouhodinová detailní prezentace na míru Vaší potřebě:
+            -  Půldenní detailní prezentace a workshop na míru Vaší potřebě:
                 -  Přehled dostupných modelů, které můžete pro Vaší aplikaci využít
                 -  Přehled dostupných technologií pro vývoj
                 -  Přehled dostupných knihoven pro integraci AI modelů
@@ -151,7 +151,7 @@ AiTraining:
                 -  Odchytávání chyb
                 -  Testování výkonu
                 -  Přechod na vyšší modely
-            -  Náslená konzultace a pomoc při vývoji Vaší aplikace
+            -  Následný půlden konzultace nad kódem a pomoc při vývoji Vaší aplikace
             -  Všechny ukázky jsou v TypeScriptu nebo JavaScriptu *(dle Vaší preference)*.
             -  V češtině nebo angličtině.
             -  A mnoho dalších informací a technik.
