--- a/locales/cs/common.yml
+++ b/locales/cs/common.yml
@@ -8,21 +8,21 @@ description: |
 Welcome:
     content: |
         ChatGPT, AI, ML, GPT-4, Anthropic Claude 3, Gemini, LLM, DALL-E, Midjourney,
-        Stable Diffusion, Sora,... 🤯
+        Stable Diffusion, Sora, GitHub Co-pilot, GPTs... 🤯
 
 
-        Využíváte **plný potenciál technologií** a generativní umělé inteligence ve vašem podnikání?
+        > Využíváte **plný potenciál technologií** a generativní umělé inteligence ve vašem podnikání?
 
 
         Technologie se neustále vyvíjí a momentálně zažíváme mohutnou vlnu nástupu **generativní umělé inteligence**,
-        která se čím dál více podobá masivnímu nástupu osobních počítačů nebo začátkům internetu.
+        která se čím dál více podobá masivnímu nástupu osobních počítačů nebo počátkům internetu.
 
 
-        Je téměř jisté, že prakticky každé odvětví lidské činnosti bude touto revolucí ovlivněno,
+        Je jisté, že prakticky každé odvětví lidské činnosti bude touto revolucí ovlivněno,
         a také vzniknou vítězové i poražení této ohromné změny.
 
 
-        Je prakticky nemožné udržet si povědomí o všem, co se na poli technologií děje, a odfiltrovat klíčové technologie od denního šumu.
+        Udržet si povědomí o všem, co se na poli AI děje; odfiltrovat klíčové momenty od denního šumu.
         **S tím vším vám rád pomohu.**
 
     back-home: Zpět na hlavní stránku
