--- a/locales/cs/common.yml
+++ b/locales/cs/common.yml
@@ -31,19 +31,21 @@ Welcome:
 PavolHejny:
     title: Kdo jsem?
     content: |
-        Jsem Pavol, vývojář, který s nadšením využívá nové nástroje a technologie.
+        Jsem Pavol, vývojář s více než 15ti letou denní zkušeností s vývojem aplikací. Mám za sebou několik desítek velkých úspěšných projektů. 
 
-        Momentálně se specializuji na tvorbu aplikací, které využívají nejnovější modely umělé inteligence.
+        Momentálně se specializuji na tvorbu aplikací, které využívají generativní umělělou inteligenci.
 
         Jsem členem konzultační skupiny Ainautes, která pomáhá s nasazením generativního AI po celém světě.
 
-        Vyvíjím službu WebGPT na generování webových stránek a také vlastní knihovnu pro orchestraci jazykových modelů Promptbook.
+        V tuto chvíli vyvíjím službu WebGPT na generování webových stránek a také vlastní knihovnu pro orchestraci jazykových modelů Promptbook.
 
         Před masivním nástupem generativní umělé inteligence jsem vytvořil první českou virtuální tabuli Collboard a elektronické učebnice H-edu,
-        které využívají desítky tisíc dětí.
+        které využívají desítky tisíc dětí a pomohli mnoho školám překlenout začátky pandemie. 
 
         Také jsem pracoval na mnoha vědeckých projektech České společnosti ornitologické.
+
         Pravidelně přednáším na konferencích, zasedám v porotě a jsem mentorem mnoha českých i mezinárodních soutěží.
+
         K tomu jsem srdcem zvláště a miluji **open source** - mnoho z mých věcí najdete na mém Githubu.
 
 # !!! Link to training
