Better training FAQ

--- a/locales/cs/common.yml
+++ b/locales/cs/common.yml
@@ -165,3 +165,27 @@ AiTraining:
         ## FAQ
 
         ### Jak probíhá školení?
+
+        Školení probíhá v rámci vaší firmy nebo online. Přijeďu k vám v rámci ČR, případně mohu dojet do blízkého zahraničí (Bratislava, Vídeň,...)
+
+
+        ### Jak dlouho trvá školení a kdy se může konat?
+
+        - **Varianta 1**: Školení trvá **půl dne** a může se konat kdykoliv po domluvě.
+        - **Varianta 2**: Školení trvá jeden den a nejlepší je, pokud začíná ráno a končí večer.
+                          Pokud je Vaše firma v Praze, můžeme ho rozdělit na dva dny, např. středa odpoledne a čtvrtek dopoledne.
+                    
+
+        ### Proč TypeScript
+
+        `TypeScript` je jazyk, ve kterém mám nejvíce zkušeností a jde o jazyk, který je velmi vhodný pro vývoj velkých uživatelských aplikací.
+        `JavaScript` je to samé, ale bez typové kontroly, což může být vhodnější pro menší projekty.
+
+        Pokud Vaše firma využívá jiný jazyk, nevadí, dokážu se přizpůsobit. Sám mám zkušenosti s `Javou`, `Pythonem`, `C`, `C++`, `PHP` a `Haskellem`.
+
+
+        ## Partneři
+
+        - Pokud vás víc zajímá vhled do AI jako takého *(nikoliv AI v kontextu vývoje aplikací)*,
+          mohu Vám doporučit školení od Ainautes, kteří se specializují na zasazení AI do širšího kontextu.
+        - Zajímá-li vás nejaktuálnější přehled AI nástrojů, doporučuji sledovat [Tomáše Kaplera](https://www.kapler.cz/) a jeho [AI newsletter](https://www.kapler.cz/) a [školení](https://www.kapler.cz/ai-skoleni/).
