--- a/locales/cs/common.yml
+++ b/locales/cs/common.yml
@@ -7,7 +7,7 @@ description: |
 # !!! Transfer to english
 Welcome:
     content: |
-        ChatGPT, AI, ML, GPT-4, Anthropic Claude 3, Gemini, LLM, DALL-E, Midjourney,
+        ChatGPT, AI, ML, GPT-4o, Anthropic Claude 3, Gemini, LLM, DALL-E, Midjourney,
         Stable Diffusion, Sora, GitHub Co-pilot, GPTs... 🤯
 
 
