--- a/locales/en/common.yml
+++ b/locales/en/common.yml
@@ -31,17 +31,15 @@ PavolHejny:
     content: |
         I'm Pavol, a developer who is passionate about using new tools and technologies.
 
-        I specialise in creating fully functional user applications using the latest artificial intelligence models.
+        Currently, I am focusing on the Promptbook framework - a new way of using AI models in a more human-like way.
 
         I am a member of the Ainautes consulting group, which supports with the deployment of generative AI around the world.
-
-        I develop the WebGPT web page generation service.
 
         Before the massive emergence of generative AI, I have created the first Czech virtual whiteboard, Collboard, and electronic textbooks, H-edu, which were used by tens of thousands of children.
 
         I have also worked on many scientific projects for the Czech Ornithological Society.
         I regularly give lectures at conferences, sit on juries, and act as a mentor in many Czech and international competitions.
-        I have a special heart for this, and I love **open source** - you can find many of my things on my GitHub.
+        I have a special heart for this, and I love open-source - you can find many of my things on my GitHub.
 
 Services:
     title: How can I help you?
