--- a/locales/cs/common.yml
+++ b/locales/cs/common.yml
@@ -31,20 +31,20 @@ Welcome:
 PavolHejny:
     title: Kdo jsem?
     content: |
-        Jsem Pavol, vývojář s více než 15ti letou denní zkušeností s vývojem aplikací. Mám za sebou několik desítek velkých úspěšných projektů. 
+        Jsem Pavol, vývojář s více než 15letou každodenní zkušeností s vývojem aplikací.
+        Mám za sebou několik velkých a úspěšných projektů.
 
-         V tuto chvíli vyvíjím framework Promptbook, který umožňuje využívat AI modely výrazně jednodušeji než kdy dříve.
+        V současnosti vyvíjím Promptbook, nástroj který umožňuje využívat AI modely výrazně jednodušeji než kdy dříve.
 
-        Jsem členem konzultační skupiny Ainautes, která pomáhá s nasazením generativního AI po celém světě.
+        Jsem členem konzultační skupiny Ainautes, která pomáhá s nasazením generativní AI po celém světě.
 
-        Před masivním nástupem generativní umělé inteligence jsem vytvořil první českou virtuální tabuli Collboard a elektronické učebnice H-edu,
-        které využívají desítky tisíc dětí a pomohli mnoho školám překlenout začátky pandemie. 
+        Před masivním nástupem generativní umělé inteligence jsem vytvořil první českou virtuální tabuli Collboard a elektronické učebnice H-edu, které využívají desítky tisíc dětí a pomohly mnoha školám překlenout začátky pandemie.
 
         Také jsem pracoval na mnoha vědeckých projektech České společnosti ornitologické.
 
-        Pravidelně přednáším na konferencích, zasedám v porotě a jsem mentorem mnoha českých i mezinárodních soutěží.
+        Pravidelně přednáším na konferencích, zasedám v porotách a jsem mentorem mnoha českých i mezinárodních soutěží.
 
-        K tomu jsem srdcem zvláště a miluji open-source - mnoho z mých věcí najdete na mém Githubu.
+        Většinu z mých projektů najdete open-source na mém GitHubu.
 
 # !!! Link to training
 Services:
